@@ -21,6 +21,8 @@ Version 1.0.10 (March xxth 2013)
 - Implemented: Wind Direction Icons
 - Changed: Drag/Dropping sensors now inserts instead of swapping items
 - Fixed: KD101 smoke detector battery indication (has none)
+- Implemented: Windows, if user has NO admin rights, the domoticz database will be created in %ProgramData%\Domoticz folder
+- Implemented: Windows, no longer need admin rights
 
 Version 1.0.9 (February 17th 2013)
 - Implemented: OWL113 option to display in Ampere/Usage
